# iobmk

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  AUTHORS  COPYING  COPYRIGHT  LICENSE  MANIFEST.in  Makefile  README.md  benchmarks.yml  downloaded_README.md  hep-benchmark-suite  metadata.tmp  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  test.sh  tox.ini
config/: benchmarks.yml
examples/: #run_kv_example.sh#  .#run_kv_example.sh  README.md  install_hep-benchmark-suite.sh  run_all_benchmarks_example.sh  run_db12_example.sh  run_hs06_example.sh  run_kv_example.sh  run_speccpu2017_example.sh
hepbenchmarksuite/: DB12.py  __init__.py  __version__.py  benchmarks.py  db12.py  exceptions.py  hepbenchmarksuite.py  json-differ.py  parser.py  send_queue.py  utils.py
iobenchmarksuite/: __init__.py  benchmarks.py  db12.py  exceptions.py  iobenchmarksuite.py  utils.py
pyscripts/: DB12.py  getHypervisor.py  json-differ.py  parser.py  send_queue.py
scripts/: install-dependencies.sh  plugins.sh
test/: check_result_entry.sh  config_ci_tests.sh  qa_send_queue.bat  run_bats_tests.sh  run_hepscore_parameter_scan.sh  test_getHypervisor.sh  test_get_hepscore_WLs_images.py  test_hepscore_config.bat  test_hs06_parser.bat  test_hs06_parser.sh  test_installation_and_run.sh  test_parser.bat  test_run_spec.sh  test_send_queue.sh  test_singularity_in_singularity_in_docker.sh  test_spec2017_parser.bat  test_spec2017_parser.sh
tests/: benchmarks_ci_test.yml  ci_run_script.sh  hepscore_ci.yaml  qa_send_queue.bat  (+5 more)
(+112 files in other folders)
