[metadata]
name = io-benchmark-suite
author = David Southwick
author-email = David.Southwick@cern.ch
summary = Benchmark Orchestrator Tool to run several benchmarks.
long_description = file:README.md
long_description-content = text/markdown
home-page = https://gitlab.cern.ch/io-benchmarks
project_urls =
    Documentation = https://docs.openstack.org/pbr/iobmk/-/master/readme
    Source Code = https://gitlab.cern.ch/io-benchmarks/iobmk
license = GPLv3
classifier =
    Development Status :: 2 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = iobmk

[options]
python_requires = >= 3.6
install_requires =
    pyyaml >= 5.1
    stomp.py
    importlib-metadata
packages = find:
# packages=['iobenchmarksuite', 'iobenchmarksuite.plugins', 'iobenchmarksuite.config'],
scripts = 
    bin/iobmk
    bin/show_metadata

[options.package_data]
config = config/*